# openeuler-qemu

./: .gitmodules  MAINTAINERS  Makefile  README-cn.md  blockdev.c  check-uefi-bios.sh  check_uefibios.sh  checkhmcode.sh  configure  cpu.c  cpus.c  exec.c  gdbstub.c  hmp-commands.hx  meson.build  meson_options.txt  qemu-img.c  qemu-nbd.c  qemu-options.hx  qemu.spec  run_kvm_config.sh  version.rc
backends/: hostmem-epc.c  hostmem-file.c  hostmem-memfd.c
block/: file-posix.c  io.c  linux-aio.c  meson.build  parallels.c  qcow.c  vdi.c  vhdx.c  vmdk.c  vpc.c  vvfat.c
chardev/: char-pty.c  char-serial.c  char-socket.c  char.c
disas/: meson.build  sw64.c  sw64.h
dump/: dump.c
fpu/: meson.build
gdb-xml/: sw64-core.xml
hw/: Kconfig  meson.build
hw/sw64/: Kconfig  Makefile.objs  core.h  core3.c  core3_board.c  core4.c  core4_board.c  meson.build  pm.h  sunway.c  sw64-acpi-build.c  sw64_iommu.c
include/: elf.h  qemu-common.h  qemu-log.h
io/: net-listener.c
linux-user/: elfload.c  meson.build  syscall.c  syscall_defs.h
migration/: cpr-state.c  cpr.c  dirtyrate.c  file.c  meson.build  migration.c  migration.h  multifd.c  qat.c  qat.h  qemu-file-channel.c  qemu-file-channel.h  ram-compress.c  ram.c  ram.h  rdma.c  trace-events
monitor/: hmp-cmds.c  monitor.c  qmp-cmds-control.c  qmp.c
nbd/: server.c
net/: colo-compare.c  filter-rewriter.c  tap.c  vhost-user.c
pc-bios/: c3-uefi-bios-sw  core3-hmcode  core4-hmcode  core4-reset  meson.build  uefi-bios-sw
qapi/: block-core.json  char.json  machine-target.json  machine.json  migration.json  pragma.json  (+3 more)
(+186 files in other folders)
